k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "stacknotes-svc"
  labels:
    app: "stacknotes"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "stacknotes-svc"
  template:
    metadata:
      labels:
        app: "stacknotes-svc"
    spec:
      containers:
        - name: "stacknotes-svc"
          image: "stacknotes-backend"
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 3500
              protocol: TCP
          volumeMounts:
            - name: backend-volume
              mountPath: /app/logs
      volumes:
        - name: backend-volume
          persistentVolumeClaim:
            claimName: backend-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: backend-clusterip
spec:
  selector:
    app: "stacknotes-svc"
  ports:
  - port: 80
    targetPort: 3500
