k8s/database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "mongodb-svc"
  labels:
    app: "stacknotes"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "mongodb-svc"
  template:
    metadata:
      labels:
        app: "mongodb-svc"
    spec:
      containers:
        - name: "mongodb-svc"
          image: "mongo"
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - containerPort: 27017
              protocol: TCP
          volumeMounts:
            - name: db-volume
              mountPath: /data/db
      volumes:
        - name: db-volume
          persistentVolumeClaim:
            claimName: db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: db-clusterip
spec:
  selector:
    app: "mongodb-svc"
  ports:
  - port: 27017
