k8s/db-exporter.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-exporter
  labels:
    app: mongodb-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-exporter
  template:
    metadata:
      labels:
        app: mongodb-exporter
    spec:
      containers:
        - name: mongodb-exporter
          image: percona/mongodb_exporter:0.37.0
          ports:
            - containerPort: 9216
              name: http-metrics
          args:
            - '--mongodb.uri=mongodb://mongodb_exporter:mongopw@db-clusterip:27017/admin?authSource=admin'
            - '--collect-all'
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-exporter-service
  labels:
    app: mongodb-exporter-svc 
spec:
  selector:
    app: mongodb-exporter
  ports:
    - protocol: TCP
      port: 9216
      targetPort: http-metrics
      name: http-metrics
  type: ClusterIP


# db.createUser({ user: "mongodb_exporter", pwd: "mongopw", roles: [{ role: "clusterMonitor", db: "admin" },{ role: "read", db: "local" }]})
