k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "stacknotes-app"
  labels:
    app: "stacknotes"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "stacknotes-app"
  template:
    metadata:
      labels:
        app: "stacknotes-app"
    spec:
      containers:
        - name: "stacknotes-app"
          image: "stacknotes-frontend"
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-clusterip
spec:
  selector:
    app: "stacknotes-app"
  ports:
  - port: 80
