k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  labels:
    name: ingress-svc
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.stacknotes.local
        - api.stacknotes.local
      secretName: stacknotes-local-tls
  rules:
    - host: app.stacknotes.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend-clusterip
                port:
                  number: 80
    - host: api.stacknotes.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: backend-clusterip
                port:
                  number: 80
